--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <body>
     <div class="card">
         <div class="top-symbol" id="top-symbol"></div>
-        <div id="card-number">5</div>
+        <div id="card-number"></div>
         <div class="bottom-symbol" id="bottom-symbol"></div>
     </div>
+
+    <button id="generateButton">Generate Random Card</button>
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
